<resources>
    <string name="app_name">Weather Application</string>

    <string name="menu_item_forecast">Forecast</string>
    <string name="menu_item_about">About us</string>
    <string name="about_description">Here should be information about the author</string>

    <string name="city_name_hint">City name</string>
    <string name="show_forecast_confirm">Are you sure?</string>
    <string name="show_forecast_yes">Go</string>
    <string name="button_ok">OK</string>
    <string name="button_retry">Retry</string>
    <string name="button_back">Back</string>

    <string name="weather_info_title">%1$s\'s weather</string>

    <string name="weather_description">Feels like</string>
    <string name="weather_extra_info_title">Today\'s details</string>

    <string name="sunrise_extra_option">Sunrise time</string>
    <string name="sunset_extra_option">Sunset time</string>
    <string name="temp_extra_option">Temperature</string>
    <string name="feelslike_extra_option">Feels like</string>
    <string name="atm_pressure_extra_option">Atmospheric pressure</string>
    <string name="humidity_option">Humidity, %</string>
    <string name="wind_option">Wind</string>

    <string name="temperature">Temperature</string>
    <string name="temperature_unit" translatable="false">°C</string>

    <string name="week_forecast_title">Forecast for the next days</string>
    <string name="more_info_btn">See information</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="current_city">Your city:</string>
    <string name="see_forecast_step1">First, choose city:</string>
    <string name="see_forecast_step2">Next, choose options you want to see:</string>
    <string name="see_forecast_step3">And push the button to see the forecast:</string>
    <string name="see_forecast_btn">See forecast</string>

    <string name="settings">Settings</string>
    <string name="setting_night_mode">Night mode</string>

    <string name="error_title">Error!</string>
    <string name="empty_city_name_error">City name cannot be empty</string>
    <string name="cannot_load_info_error">Cannot load information</string>
    <string name="gps_disabled_error">"GPS is disabled in your device. Would you like to enable it?"</string>

    <string name="title_notification">Informational notification</string>
    <string name="low_battery_notification">Low battery!</string>
    <string name="no_network_notification">No network connection!</string>

    <string name="extra_item_label" translatable="false">Extra item %d</string>
    <string name="temperature_dummy" translatable="false">7°C</string>
    <string name="time_dummy" translatable="false">12:00</string>
    <string name="nav_header_title" translatable="false">Mary Sue</string>
    <string name="nav_header_subtitle" translatable="false">a_n_onim@mail.ru</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
</resources>