<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundImage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_current_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_clear_sun"
                app:tint="?android:textColorSecondary"/>

            <LinearLayout
                android:id="@+id/weather_day_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/current_temp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/weather_extra_info_title"
                    style="@style/SubtitleTextStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/extra_info_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_day_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:backgroundTint="?backgroundRecyclerColor"
                app:layout_constraintTop_toBottomOf="@id/weather_day_info">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/week_forecast_title"
                    style="@style/SubtitleTextStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_week_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <Button
                    android:id="@+id/btn_more_info"
                    android:theme="@style/CustomTextButtonTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:enabled="false"
                    android:text="@string/more_info_btn" />
            </LinearLayout>

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_dummy"
                style="@style/CustomTextButtonTheme"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_current_weather" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>