<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
    android:background="?attr/backgroundImage"
    tools:context=".WeatherInfoActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/current_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_clear_sun" />

            <LinearLayout
                android:id="@+id/weather_day_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/current_temp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/weather_extra_info_title"
                    android:textAppearance="@style/SubtitleTextStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/extra_info_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_day_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:backgroundTint="?attr/backgroundRecyclerColor"
                app:layout_constraintTop_toBottomOf="@id/weather_day_info">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/week_forecast_title"
                    android:textAppearance="@style/SubtitleTextStyle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_week_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </LinearLayout>

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_dummy"
                android:textAppearance="@style/InfoTextStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/current_weather" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>